<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="36dp"
        app:layoutDescription="@xml/fragment_login_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_primary"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:textColor="@color/input_text"
                android:textColorHint="#5519194D"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text_18sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_input_view"
            app:layout_constraintEnd_toEndOf="@+id/email_input_view"
            app:layout_constraintTop_toTopOf="@+id/email_input_view"
            app:srcCompat="@drawable/ic_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_view"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_primary"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:textColor="@color/input_text"
                android:textColorHint="#5519194D"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text_18sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ic_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="@+id/password_input_view"
            app:layout_constraintEnd_toEndOf="@+id/password_input_view"
            app:layout_constraintTop_toTopOf="@+id/password_input_view" />

        <TextView
            android:id="@+id/error_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_view" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/btn_home"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.05"
            android:stateListAnimator="@null"
            android:text="@string/login_btn"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_login" />

        <Button
            android:id="@+id/btn_demo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@drawable/btn_home"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.05"
            android:stateListAnimator="@null"
            android:text="@string/demo_mode"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/login_note"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/terms_conditions"
            android:textAlignment="center"
            android:textColor="@color/text_dark_blue"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_demo" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.constraintlayout.widget.ConstraintLayout>