...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:orientation="vertical">

            <team.marker.util.camera.CameraSourcePreview
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <team.marker.util.camera.GraphicOverlay
                    android:id="@+id/graphic_overlay"
                    android:layout_width="match_parent"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pick_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#55000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_scan_flash"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
...
