...
    <string name="no_camera_permissions">Нет разрешений для камеры</string>
    <string name="wrong_login_password">неправильный логин или пароль</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="terms_conditions">Осуществляя вход вы выражаете согласие с нашими Условиями обслуживания и Политикой конфиденциальности</string>
    <string name="back">Назад</string>
    <string name="internet_unavailable">интернет недоступен</string>
    <string name="result_of_checking">Результат проверки</string>
    <string name="product_not_found">Изделие не найдено, проверьте код</string>
    <string name="password">пароль</string>
    // home
    <string name="get_product_info">Получение подробной информации об изделии</string>
    <string name="recognize">Распознать</string>
...
    <string name="creation_ttn">Создание ТТН</string>
    <string name="create_ttn">Создать ТТН</string>
    <string name="create_ttn_full">Создать товарно-транспортную накладную</string>
    <string name="breach">Некондиция</string>
    <string name="send_breach_request">Отправить отчет о некондиционных изделиях</string>
    <string name="exit">Выход</string>
    <string name="logout_title">Выйти из профиля?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    // pick
    <string name="enter_number_accepted_units">Введите количество оприходуемых единиц (шт.)</string>
    <string name="enter_product_length">Введите длину оприходуемой продукции (в погонных метрах)</string>
    <string name="enter_product_weight">Введите вес оприходуемой продукции (в кг)</string>
...
